Ignore qtcreator settings (#8)
Reviewed-on: http://devops-server/tychosoft/apollo/pulls/8

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,12 @@ web/*.conf
 *.tar
 *.tar.gz
 
+# strip out qtcreator from git
+.qtc_*/
+*.user
+*.cflags
+*.config
+*.creator
+*.cxxflags
+*.files
+*.includes
