--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,8 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 .gitea/ export-ignore
+.gitlab-ci.yml export-ignore
+.gitlab/ export-ignore
 
 .make/dist.mk export-ignore
 .make/deploy.* export-ignore
